# euda

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MIGRATING.md  README.md  design.md  docker-compose.yml  main.py  meanddus-logo.xcf  pyproject.toml  requirements.txt  router.py  shared-cli.py  shared-router.py  todo.md
.github/workflows/: discord-notify.yml
agent-lib/fun/: config.json  identity.md  profile.md
agent-lib/growth/: config.json  identity.md  profile.md
agent-lib/nextcloud/: config.json  identity.md
agent-lib/socialize/: config.json  identity.md  profile.md
android/: README.md  gradlew
android-app/: .gitignore  README.md  gradlew.bat  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
contrib/: README.md  buddy-williams.md  chris-duncan.md  logan-owens.md  logan-unknown.md  robbie-huffman.md
core/agents/: config.default.json  pyproject.toml
core/chat/: pyproject.toml
core/identity/: README.md  config.default.json  identity-file-guide.md  pyproject.toml
core/identity/data/: consolidate-prompt.md  consolidate-system-prompt.md  identity-template.md
core/identity/data/guide/: guide-1.json  guide-1.md
core/identity/src/: cli.py  config.py
core/identity/tests/unit/: conftest.py  test_cli_runner.py  test_consolidate_update.py  test_schema_identity.py
core/llm/: AGENTS.md  pyproject.toml
core/llm/src/: cli.py  config.py  llm.py
core/llm/src/providers/: anthropic_client.py  openai_client.py  xai_client.py
core/llm/tests/unit/: test_call_cli.py  test_config_cli.py  test_hourly_budget.py  test_validation_errors.py
core/memory/: pyproject.toml
core/memory/src/: cli.py  config.py
core/memory/tests/unit/: test_memory_cli.py
core/topics/: AGENTS.md  pyproject.toml
data/profile/: share.prefs.template.md
data/system/: api_calls.json  api_calls.jsonl  config.json  deletions.json  llm.json  prompt_injection.json  prompts.json  prompts.jsonl  searxng.yml
data/user/: profile.current.md  top-of-mind.jsonl  user-profile.md
devops/: deploy-euno.sh  deploy.sh  manage.sh  migrate-to-rlm.sh  pull-data-remote.sh  push-agents-remote.sh  push-data-remote.sh  remove-server.sh  run-euno.sh  setup-server.sh  sync-data.sh
devops/searxng/: docker-compose.yml  settings.yml  start.sh
docs/: 0_business-plan.md  10_operating-agreement.md  10_roadmap.md  11_operating-agreement.md  1_pitch.md  1_vision.md  2_business-plan.md  2_euda_for_people.md  2_euno_for_people.md  2_use_cases.md  3_agents.md  3_anticipate.md  3_architecture.md  3_business-plan.md  3_contribute.md  3_profile.md  3_project-plan.md  3_system.md  4_contribute.md  4_system.md  4_user-experience.md  5_architecture.md  5_contribute.md  5_getting_started.md  5_points.md  5_user-experience.md  5_user-interface.md  6_contribute.md  6_devops.md  6_operating-agreement.md  6_points.md  6_user-interface.md  7_points.md  7_privacy.md  7_user-interface.md  8_privacy.md  9_rules.md  architecture.md  governance.md  migration-to-rlm.md  (+7 more)
docs/intent/: 01-design.md  README.md
euda/agents/: pyproject.toml
euda/chat/: pyproject.toml
euda/llm/: config.default.json  main.py  pyproject.toml
euda/logs/: AGENTS.md  pyproject.toml
euda/logs/src/: __init__.py  cli.py  config.py
euda/logs/tests/unit/: test_logs_cli.py
euda/memory/: pyproject.toml
euda/topics/: main.py  pyproject.toml
euda/topics/src/: cli.py  config.py
euda/topics/tests/unit/: test_smoke.py
euda/web/: pyproject.toml
euda/web/src/: cli.py
old-architecture/: main.py
old-architecture/src/: __init__.py  manager.py  watcher.py
plugins/core/: __init__.py  cli.py
plugins/gcal/: README.md  auth.py  cli.py  client.py  storage.py
plugins/mastodon/: cli.py
plugins/nextcloud/: __init__.py  cli.py
plugins/scaffold/: cli.py
plugins/speech/: base.py  cli.py
plugins/template/: cli.py
plugins/web_search/: cli.py
renderers/link-preview/: component.js  manifest.json
scratch-pad/: 2026-01-27_euno_plugins.md  2026-01-27_euno_plugins_raw.txt
scripts/: migrate_jobs_to_sqlite.py  migrate_jobs_to_topics.py  migrate_notes.py
skills/autobot/: __init__.py  cli.py
skills/common/: __init__.py  http.py  parsers.py
skills/core/: cli.py
skills/gcal/: README.md  __init__.py  auth.py  cli.py  client.py  main.py  pyproject.toml  storage.py
skills/mastodon/: cli.py
skills/nextcloud/: cli.py
skills/outlook/: __init__.py  auth.py  cli.py  client.py  storage.py
skills/rss/: __init__.py  cli.py
skills/scaffold/: cli.py
skills/speech/: cli.py  integration.py
skills/web/: __init__.py  cli.py
skills/web_search/: __init__.py  cli.py
spec/: 1_agents.md  1_data.md  1_orchestration.md  2_data.md  2_system.md  3_backend.md  3_system.md  3_user-experience.md  4_user-experience.md  4_ux_ui.md  5_cli.md  6_llm.md  7_dev_cli.md  8_patterns.md
specs/: 10_renderers.md  1_agents.md  2_data.md  3_backend.md  4_ux_ui.md  5_cli.md  6_llm.md  7_dev_cli.md  8_plugins.md  8_skills.md  8_tests.md  9_web_skill.md
src/: __init__.py  agent.py  auth.py  cost_tracker.py  events.py  fresh_start.py  llm.py  llm_anthropic.py  llm_grok.py  llm_openai.py  logger.py  manager.py  prompts.py  rate_limiter.py  tool_batcher.py  watcher.py
src/agent/: __init__.py  agent.py  interests.py  logger.py  manager.py
src/agents/: __init__.py  adaptor.py  archivist.py  attention.py  base.py  curator.py  evolution.py  friend.py  identity.py  ingestion.py  interaction.py  introspection.py  profiler.py  self.py  summary.py  synthesis.py  values.py  worker.py  world.py
src/cli/: __init__.py  dev.py  formatters.py  stream.py
src/core/: __init__.py  (+1 more)
static/: index.html
templates/scaffold/euda/: AGENTS.md  pyproject.toml
templates/scaffold/euda/src/: cli.py  config.py
test_core/: 2024-12-23_meeting.txt  2024-12-24_holiday_note.txt  2024-12-24_idea.txt  2025-12-19_idea.txt  2025-12-24_dev_note.txt  A Primer on Logic.txt  AI Economics - The Time Traveler_s Gift.txt  Cyclic Rationality.txt  Economics in the Intelligence Age.txt  Why Hypotheticals Matter.txt
tests/: COVERAGE_MAP.md  conftest.py
web/: index.html
(+1006 files in other folders)
