[project]
name = "euno"
version = "0.1.0"
description = "A personal intelligence that learns to anticipate you"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
    "watchdog>=4.0.0",
    "watchfiles>=0.21.0",
    "sse-starlette>=1.6.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "aiofiles>=23.0.0",
    "Pillow>=10.0.0",
    "pypdf>=4.0.0",
    "python-magic>=0.4.27",
    "ffmpeg-python>=0.2.0",
    "mutagen>=1.47.0",
    "py7zr>=0.20.0",
    "rarfile>=4.0",
    "bcrypt>=4.0.0",
]

[project.scripts]
euno = "main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "main.py"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "freezegun>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --strict-markers"
markers = [
    "invariant: Design invariant tests from specs",
]
