[project]
name = "euda"
version = "0.1.0"
description = "CLI router for Euda euda/skills apps"
requires-python = ">=3.11"
dependencies = ["typer>=0.12.0"]

[project.scripts]
euda = "main:app"
skills = "main:skills_app"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
include = ["main.py"]
