[project]
name = "euda-llm"
version = "0.1.0"
description = "LLM calls, budgeting, and provider config"
requires-python = ">=3.11"
dependencies = ["typer>=0.12.0", "openai", "anthropic", "xai-sdk", "pytest>=8.0.0"]

[project.scripts]
llm = "main:app"


[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
include = [
  "main.py",
  "src/__init__.py",
  "src/cli.py",
  "src/config.py",
  "src/llm.py",
  "src/providers/__init__.py",
  "src/providers/base.py",
  "src/providers/openai_client.py",
  "src/providers/anthropic_client.py",
  "src/providers/xai_client.py",
  "config.default.json",
]
