[project]
name = "euda-memory"
version = "0.1.0"
description = "Memory configuration and utilities"
requires-python = ">=3.11"
dependencies = ["typer>=0.12.0", "pytest>=8.0.0"]

[project.scripts]
memory = "main:app"
pytest = "pytest:main"


[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
include = [
  "main.py",
  "src/__init__.py",
  "src/cli.py",
  "src/config.py",
  "config.default.json",
]
