[project]
name = "euda-logs"
version = "0.1.0"
description = "Write, read, and tail structured logs"
requires-python = ">=3.11"
dependencies = ["typer>=0.12.0"]

[project.scripts]
logs = "main:app"


[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
include = [
  "main.py",
  "src/__init__.py",
  "src/cli.py",
  "src/config.py",
  "config.default.json",
]
