[project]
name = "euda-web"
version = "0.1.0"
description = "Euda web CLI"
requires-python = ">=3.11"
dependencies = ["typer>=0.12.0"]

[project.scripts]
web = "main:app"


[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
include = [
  "main.py",
  "src/__init__.py",
  "src/cli.py",
  "src/config.py",
  "config.default.json",
]
